--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,21 +6,34 @@
         xmlns:local="clr-namespace:USB6501_WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <StackPanel Margin="20">
 
-        <TextBlock Text="High Zeit (ms):"/>
-        <TextBox Name="HighTimeTextBox" Text="500"/>
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-        <TextBlock Text="Low Zeit (ms):"/>
-        <TextBox Name="LowTimeTextBox" Text="500"/>
-
-        <TextBlock Text="Wiederholungen (0 = unendlich):"/>
-        <TextBox Name="RepeatCountTextBox" Text="0"/>
-
-        <StackPanel Orientation="Horizontal" Margin="0,20,0,0" HorizontalAlignment="Center">
-            <Button Content="Start" Click="StartButton_Click" Width="80" Margin="0,0,10,0"/>
-            <Button Content="Stop" Click="StopButton_Click" Width="80"/>
+        <StackPanel Orientation="Horizontal" Margin="0 5">
+            <TextBlock Text="High-Zeit (ms):" VerticalAlignment="Center" Width="100"/>
+            <TextBox x:Name="HighTimeTextBox" Width="100" Text="500"/>
         </StackPanel>
 
-    </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0 5">
+            <TextBlock Text="Low-Zeit (ms):" VerticalAlignment="Center" Width="100"/>
+            <TextBox x:Name="LowTimeTextBox" Width="100" Text="500"/>
+        </StackPanel>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="0 5">
+            <TextBlock Text="Wiederholungen (0 = unendlich):" VerticalAlignment="Center" Width="200"/>
+            <TextBox x:Name="RepeatCountTextBox" Width="80" Text="0"/>
+        </StackPanel>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="3" Margin="0 10" HorizontalAlignment="Center">
+            <Button Content="Start" Width="80" Margin="10,0" Click="StartButton_Click"/>
+            <Button Content="Stop" Width="80" Margin="10,0" Click="StopButton_Click"/>
+        </StackPanel>
+        
+    </Grid>
 </Window>
